--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "cars",
+  "name": "untitled",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://RomaK74.github.io/cars/build",
   "dependencies": {
+    "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
